--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 * {
-    background-color: #2F4454;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #EAE7DC;
+    color: #8E8D8A;
+    font-family: 'Agdasima', sans-serif;
 }
 h1 {
-    color: #DA7B93;
+    color: #E85A4F;
+    letter-spacing: 2px;
 }
 h2 {
-    color: #376E6F;
+    color: #E98074;
 }
