--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,14 @@ h1 {
 }
 h2 {
     color: #E98074;
-    padding: 2em 2em;
+    /* padding: 2em 2em; */
     display: flex;
     justify-content: center;
+    font-size: 40px;
 }
 p {
     letter-spacing: 1px;
-    font-size: 20px;
+    font-size: 25px;
     width: 75%;
     display: flex;
     justify-content: center;
@@ -29,7 +30,7 @@ p {
 }
 .site-info {
     display: flex;
-    justify-content: center;
+    justify-content: center;padding: 25px;
 }
 .nav-menu {
     text-align: center;
