--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ h2 {
     /* padding: 2em 2em; */
     display: flex;
     justify-content: center;
-    font-size: 40px;
+    font-size: 400%;
 }
 p {
     letter-spacing: 1px;
@@ -50,12 +50,13 @@ p {
     font-size: 200%;
     display: flex;
     justify-content: space-around;
+    letter-spacing: .1rem;
     background-color: #8E8D8A;
-    padding: 2em;
+    padding: 1em;
     margin-left: auto;
     margin-right: auto;
     text-decoration: none;
-    border: 2px solid #E85A4F;
+
     
     
 
@@ -67,5 +68,10 @@ p {
 }
 #idea {
     padding-right: 60%;
+}
+
+.headshot {
+    width: 40%;
+    padding-right: 5%;
 }
 
