slight color tweak

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ h1 {
     font-size: 500%;
 }
 h2 {
-    color: #E98074;
+    color: #E85A4F;
     /* padding: 2em 2em; */
     display: flex;
     justify-content: center;
