--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,14 @@ p {
     
 
 }
+@media screen and (max-width: 750px) {
+    .nav-menu {
+        display: inline-grid;
+        padding: 10px;
+
+
+    }
+}
 .link-nav {
     background-color: #8E8D8A;
     color: #EAE7DC;
@@ -78,5 +86,12 @@ p {
     width: 40%;
     padding-right: 5%;
 }
+@media screen and (max-width: 750px) {
+    .headshot {
+        display: none;
+        opacity: 0;
+    }
+}
+
 
 
