--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-* {
-  background-color: #eae7dc;
-  color: #8e8d8a;
-  font-family: "Agdasima", sans-serif;
-}
 html,
 body {
   max-width: 100%;
@@ -20,30 +15,82 @@ body {
 .heading {
   z-index: 1;
   position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "IBM Plex Serif", serif;
+  text-shadow: 2px 2px 0 #071218;
+}
+.subheading {
+  z-index: 1;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  font-family: "Arimo", sans-serif;
+  text-shadow: 2px 2px 0 #071218;
+}
+.pronouns {
+  z-index: 1;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  font-family: "Arimo", sans-serif;
+  text-shadow: 2px 2px 0 #071218;
 }
-
-h1 {
-  color: #e85a4f;
+.intro {
+  color: #cbcccd;
   letter-spacing: 2px;
   text-align: center;
-  font-size: 500%;
 }
-h2 {
-  color: #e85a4f;
-  /* padding: 2em 2em; */
+.intro-text {
+  z-index: 2;
+  font-family: "Arimo", sans-serif;
+}
+.about {
   display: flex;
   justify-content: center;
-  font-size: 400%;
+
+
+  font-family: "Arimo", sans-serif;
+
+
+  text-align: center;
 }
-p {
-  letter-spacing: 1px;
-  font-size: 25px;
-  width: 75%;
+.boxes {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+width: 100%;
+  background-color: #4dad9c;
+}
+.headshot {
+    width: fit-content;
+    margin-left: 0%;
+
+
+  }
+.colorBox {
+    background-color: #071218;
+
+    width: 100%;
+    flex-direction: column;
+  height: 20%;
+  justify-content: end;
+}
+.description {
+    padding: 2em;
+    font-family: "Arimo", sans-serif;
+    font-size: 1.5em;
+    color: #eae7dc;
+    
+    text-align: center;
 }
 .project-buttons {
   display: flex;
@@ -99,10 +146,7 @@ p {
   padding-right: 60%;
 }
 
-.headshot {
-  width: 40%;
-  padding-right: 5%;
-}
+
 @media screen and (max-width: 750px) {
   .headshot {
     display: none;
