--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,11 @@ body {
 }
 .heading {
   z-index: 1;
-  position: absolute;
+  position: static;
   top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: "IBM Plex Serif", serif;
-  
   text-shadow: 2px 2px 0 #071218;
 }
 .subheading {
@@ -72,8 +71,8 @@ body {
 .sanSerif {
   font-family: "Arimo", sans-serif;
   font-size: 30%;
-  position: absolute;
-  top: 113%;
+
+  top: 140%;
   left: 45%;
   color: #071218;
 }
@@ -98,6 +97,41 @@ body {
   width: 100%;
   text-align: left;
   margin-left: 40%;
+}
+.eduHeading {
+  font-family: "ibm plex serif", serif;
+  font-size: 1.5em;
+  color: #071218;
+  width: 50%;
+  text-align: left;
+  border: #e85a4f solid 1px;
+  margin-left: 0;
+}
+
+.resumeFormat {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  /* Add your resume format styles here */
+}
+.experience {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1vw;
+  height: .5vw;
+  background-color: #B9BCBE;
+  margin-bottom: 20px; /* Add margin-bottom for space */
+
+}
+.experience {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1vw;
+  height: .5vw;
+  background-color: #B9BCBE;
 }
 .project-buttons {
   display: flex;
