--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ footer {
   .contact-icon,
   footer {
     display: block;
-    margin: 0 auto;
+    margin: auto auto;
     text-align: center;
     
   }
