--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 /* Reset some default styles */
 body,
 h1,
@@ -45,6 +43,8 @@ nav a {
   align-items: center;
   height: 30vh;
 }
+
+/* Style the name container */
 .name-container {
   display: flex;
   align-items: center;
@@ -56,17 +56,8 @@ nav a {
   margin-left: -100%;
 }
 
-.name-container {
-  display: flex;
-  align-items: center;
-}
-.name {
-  font-size: 3em; /* Adjust this value to your liking */
-}
-
 /* Style sections */
 .section {
-  padding: 50px 0;
   text-align: center;
 }
 
@@ -80,7 +71,6 @@ nav a {
   display: flex;
   align-items: center; /* Vertically align items */
   padding: 30px 0;
-  
 }
 
 .about-header img {
@@ -91,36 +81,40 @@ nav a {
 
 /* Style the about content */
 .headshot {
-    margin-right: 5%;
+  margin-right: 5%;
 }
+
 .aboutMe {
-    margin-bottom: 5%;
-    margin-left: 25%;
-    color: #8e5f8a;
+  margin-bottom: 5%;
+  margin-left: 25%;
+  color: #8e5f8a;
 }
+
 .aboutMePara {
-    margin-left: 15%;
-    width: 100%;
+  margin-left: 15%;
+  width: 100%;
 }
+
 .about-content {
   flex: 1; /* Takes up the remaining space */
 }
 
+/* Style the project grid */
 .project-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 30px;
-    margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 30px;
+  margin-top: 30px;
 }
 
 .project-grid a {
-    text-decoration: none; /* Remove underline */
-    color: black; 
+  text-decoration: none; /* Remove underline */
+  color: black;
 }
 
 .projectTitles {
-    margin-top: 10%;
-    color: #8e5f8a;
+  margin-top: 10%;
+  color: #8e5f8a;
 }
 
 /* Style each project in the grid */
@@ -140,8 +134,9 @@ nav a {
 /* Style the contact icons */
 .contact-icon {
   width: 50px; /* Adjust the size as needed */
-  margin: 10px; /* Add spacing between icons */
-  margin-top: -50%;
+}
+.rightIcon {
+  margin-right: 20%;
 }
 
 /* Style footer */
@@ -155,7 +150,8 @@ footer {
 
 /* Add a media query for responsiveness */
 
-@media (max-width: 1000px) {
+@media (max-width: 1300px) {
+  /* Hide elements on smaller screens */
   body,
   h1,
   h2,
@@ -179,7 +175,9 @@ footer {
     height: fit-content;
   }
 }
-@media (max-width: 1000px) {
+
+@media (max-width: 1300px) {
+  /* Adjust header and navbar on smaller screens */
   header,
   .navbar {
     display: block;
@@ -189,7 +187,9 @@ footer {
     width: 100vw;
   }
 }
-@media (max-width: 1000px) {
+
+@media (max-width: 1300px) {
+  /* Adjust header and list items on smaller screens */
   header,
   li {
     display: block;
@@ -199,7 +199,9 @@ footer {
     padding: 5%;
   }
 }
-@media (max-width: 1000px) {
+
+@media (max-width: 1300px) {
+  /* Adjust footer on smaller screens */
   footer {
     display: block;
     margin: auto auto;
@@ -210,13 +212,52 @@ footer {
   }
 }
 
-  @media (max-width: 1000px) {
-    .about-header,
-    .headshot
-    img {
-      display: block;
-      margin: auto;
-      height: fit-content;
-      margin-bottom: 25px;
-    }
+@media (max-width: 1300px) {
+  /* Adjust about header and headshot image on smaller screens */
+  .about-header,
+  .headshot img {
+    display: block;
+    margin: auto;
+    height: fit-content;
+    margin-bottom: 25px;
   }
+}
+
+@media screen and (max-width: 1300px) {
+  /* Adjust project on smaller screens */
+  .project {
+    display: block;
+    margin: auto auto;
+    text-align: center;
+    height: fit-content;
+    margin: 5%;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  /* Adjust aboutMe on smaller screens */
+  .aboutMe {
+    display: block;
+    margin: auto auto;
+    height: fit-content;
+    margin: 5%;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  /* Adjust projectTitles on smaller screens */
+  .projectTitles {
+    display: block;
+    margin: auto auto;
+    height: fit-content;
+    margin-top: 5%;
+  }
+}
+@media screen and (max-width: 1300px) {
+  /* Adjust projectTitles on smaller screens */
+  .rightIcon {
+
+    margin-right: 0%;
+  }
+  
+}
